--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body{
 }
 .principal{
     background-image: url(img/Background.png);
+    background-image: no-repeat;
+    background-image: contain;
 }
 .container{
     height: 100vh;
