--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body{
 }
 .principal{
     background-image: url(img/Background.png);
-    background-image: no-repeat;
-    background-image: contain;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 .container{
     height: 100vh;
