--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body{
 }
 .container{
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 .container_botao{
     background-color: var(--cor-de-fundo);
