--- a/style.css
+++ b/style.css
@@ -25,3 +25,7 @@ body{
     color: var(--cinza-secundario);
     display: block;
 }
+.botao_secundario{
+ background-color: transparent;   
+ border: 2px solid var(--branco-principal);
+}
