--- a/style.css
+++ b/style.css
@@ -29,3 +29,6 @@ body{
  background-color: transparent;   
  border: 2px solid var(--branco-principal);
 }
+.conteiner_imagem{
+    margin: 1em ;
+}
